<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cvMatch"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/colorAccent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clChildCv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/date_event"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/lnTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:weightSum="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDate">

                <TextView
                    android:id="@+id/tvTeamHomeName"
                    style="@style/TextViewMatch"
                    android:layout_weight="3"
                    android:gravity="right|center_vertical"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/home_team"/>

                <TextView
                    android:id="@+id/tvTeamHomeScore"
                    style="@style/TextViewMatch"
                    android:layout_weight="1.5"
                    android:gravity="center_vertical|center"
                    android:textColor="@color/red"
                    android:textSize="30sp"
                    android:text="@string/home_score"/>

                <TextView
                    style="@style/TextViewMatch"
                    android:layout_weight="1"
                    android:gravity="center|center_vertical"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:text="vs"/>

                <TextView
                    android:id="@+id/tvTeamAwayScore"
                    style="@style/TextViewMatch"
                    android:layout_weight="1.5"
                    android:gravity="center_vertical|center"
                    android:textColor="@color/red"
                    android:textSize="30sp"
                    android:text="@string/away_score"/>

                <TextView
                    android:id="@+id/tvTeamAwayName"
                    style="@style/TextViewMatch"
                    android:layout_weight="3"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/away_team"/>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>